[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "libreriaclases"
version = "0.0.1"
authors = [
    { name="PBL grupo 6", email="lucia.royo@alumni.mondragon.edu" },
]
description = "Libreria preproceso"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/luroyo/POBgrupo6"
"Bug Tracker" = "https://github.com/luroyo/POBgrupo6/issues"