[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "libreriaclases"
version = "3.8"
authors = [
    { name="uxueballarin", email="uxue.ballarin@alumni.mondragon.edu" },
]
description = "Libreria preproceso"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=4.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/uxueballarin/PBLgrupo6"
"Bug Tracker" = "https://github.com/uxueballarin/PBLgrupo6/issues"